@@ -53,6 +53,10 @@
    - itojun@cvs.openbsd.org 2001/12/05 03:50:01
      [clientloop.c serverloop.c sshd.c]
      deal with LP64 printf issue with sig_atomic_t.  from thorpej
+   - itojun@cvs.openbsd.org 2001/12/05 03:56:39
+     [auth1.c auth2.c canohost.c channels.c deattack.c packet.c scp.c 
+      sshconnect2.c]
+     make it compile with more strict prototype checking
 
 20011126
  - (tim) [contrib/cygwin/README, openbsd-compat/bsd-cygwin_util.c,
@@ -6975,4 +6979,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1682 2001/12/06 17:52:16 mouring Exp $
+$Id: ChangeLog,v 1.1683 2001/12/06 17:55:26 mouring Exp $
